<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SayHi</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_title">SayHi</string>
	<string name="me">我</string>
	<string name="post">发表</string>
	<string name="topic_tips">没有消息？点我试试吧^_^</string>
	
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
	<string name="notify_text"> 条新消息</string>
	
	<string name="sidemenu_0">私信</string>
	<string name="sidemenu_1">消息中心</string>
	<string name="sidemenu_2">邀请微信好友</string>
	<string name="sidemenu_3">关于我们</string>
	<string name="sidemenu_4">更改密码</string>
	<string name="sidemenu_5">退出登录</string>
	
	<string name="viewpager_indicator">%1$d/%2$d</string>
	<string name="note_activity_comment">参与讨论</string>
    <string name="note_activity_send">发送</string>
    <string name="comment_no_tip">还没有评论</string>
    <string name="comment_list_failed">加载失败，点击重试</string>
</resources>
