<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:orientation = "vertical"
    android:layout_marginLeft="20dp"
    >
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/gray"
        />
    <TextView 
        android:id="@+id/msgcenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/sidemenu_1"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="onMsgCenterClicked"
        android:textColor="@color/textcolor"
        />
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        />
    <TextView 
        android:id="@+id/sharewx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/sidemenu_2"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="onShareWXClicked"
        android:textColor="@color/textcolor"
        />
    <TextView 
        android:id="@+id/aboutus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/sidemenu_3"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="onAboutUsClicked"
        android:textColor="@color/textcolor"
        />
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        />
    <TextView 
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/sidemenu_5"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="onLogoutClicked"
        android:textColor="@color/textcolor"
        />
</LinearLayout>